# udp-stream

./: Cargo.toml
benches/: benchmark_lib.rs  benchmark_optimize_buf.rs  benchmark_optimize_drop.rs
src/: buf_with_bytesmut.rs  stream_drop_by_mpsc.rs
